[gd_scene load_steps=11 format=2]

[ext_resource path="res://assets/sprites/00_02_car.png" type="Texture" id=1]
[ext_resource path="res://scripts/microgames/entities/00_02_Car.gd" type="Script" id=2]
[ext_resource path="res://assets/sprites/00_02_particles.png" type="Texture" id=3]
[ext_resource path="res://scenes/util/AudioSpeedController.tscn" type="PackedScene" id=4]
[ext_resource path="res://assets/sounds/sfx/wario_death_0.mp3" type="AudioStream" id=5]

[sub_resource type="AtlasTexture" id=1]
atlas = ExtResource( 1 )
region = Rect2( 18, 0, 18, 22 )

[sub_resource type="CanvasItemMaterial" id=4]
particles_animation = true
particles_anim_h_frames = 4
particles_anim_v_frames = 1
particles_anim_loop = false

[sub_resource type="ParticlesMaterial" id=5]
flag_disable_z = true
direction = Vector3( 1, 1, 0 )
spread = 0.0
gravity = Vector3( 0, 0, 0 )
initial_velocity = 70.0
orbit_velocity = 0.0
orbit_velocity_random = 0.0
anim_speed = 1.0

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 7, 8 )

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 4, 6 )

[node name="Car" type="KinematicBody2D"]
collision_layer = 0
script = ExtResource( 2 )

[node name="Sprite" type="Sprite" parent="."]
texture = SubResource( 1 )

[node name="DeathParticles" type="Node2D" parent="."]

[node name="Particles2D" type="Particles2D" parent="DeathParticles"]
material = SubResource( 4 )
emitting = false
amount = 1
lifetime = 0.4
one_shot = true
explosiveness = 1.0
process_material = SubResource( 5 )
texture = ExtResource( 3 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 0, 1 )
shape = SubResource( 2 )

[node name="HurtBox" type="Area2D" parent="."]
collision_layer = 256
collision_mask = 256

[node name="CollisionShape2D" type="CollisionShape2D" parent="HurtBox"]
position = Vector2( 0, 1 )
shape = SubResource( 3 )

[node name="AudioSpeedController" parent="." instance=ExtResource( 4 )]
stream = ExtResource( 5 )
bus = "Microgame-SFX"
